--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,28 @@
 img{
-    text-align: center;
-    padding: auto;
-    height: 800px;
+    width: 250px;
+}
+/*
+div{  
+    outline: solid 5px rgb(255, 255, 255);
+}
+*/
+
+
+.dagknapp{
+    border-radius: 10px;
+    background-color: rgb(214, 221, 255);
+    cursor: pointer;
+}
+
+
+
+.dagknapp:hover{
+    outline: solid 4px rgb(126, 147, 255);
+    background-color: rgb(126, 147, 255);
+}
+
+
+
+.deg-tekst{
+    font-size: larger;
 }
