--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,7 @@
 body{
-    background-color: rgb(17, 13, 40);
-    color: azure;
-    font-family: Arial, sans-serif;
+    
+    background-color: rgb(19, 9, 27);
+}
+h1,h2,h4{
+    color: white;
 }
